tests/files/error/match_non_exhaustive.boat
data Option:
    | some(v)
    | none()
end

match some(1):
    | none() => 1
end